<resources>
    <string name="app_name">TutorFinder</string>
    <string name="title_activity_tutor_location">Map</string>
    <string name="log_out">Log Out</string>
    <string name="button">Button</string>
    <string name="create_account">Create Account</string>
    <string name="first_time_login_here">First Time Login Here</string>
    <string name="login">Login</string>

    <string name="title_activity_start">StartActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tutor_fee">Tutor Fee</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="full_name">Full Name</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="register_account">Register Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="subject">Subject</string>

</resources>
